@@ -1,4 +1,6 @@
 plugindir = $(libdir)/gedit-2/plugins/devhelp
 
 plugin_PYTHON = \
-	__init__.py
+	__init__.py	\
+	devhelp.py
+
