@@ -1,3 +1,7 @@
+2006-03-30  Richard Hult  <richard@imendio.com>
+
+	* misc/gedit-plugin/devhelp/: Make it actually work.
+
 2006-03-29  Richard Hult  <richard@imendio.com>
 
 	* src/dh-main.c: (message_received_cb): Fix typo.
